# color-replacer

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
src/: app.rs  main.rs  tabs.rs
src/components/: button.rs  colors.rs  colors_picker.rs  image.rs  input_bar.rs  mod.rs
src/helpers/: config.rs
src/pages/: apply_page.rs  image_input.rs  mod.rs  warning_page.rs
src/traits/: focus_tracker.rs  get_input.rs  helpers.rs  mod.rs
