[package]
name = "color-replacer"
version = "0.1.0"
authors = ["SAANN3 <95036865+SAANN3@users.noreply.github.com>"]
license = "MIT"
edition = "2021"

[dependencies]
color-eyre = "0.6.5"
crossterm = { version ="0.28.1", features = ["event-stream", "default"]}
image = "0.25.6"
ratatui = "0.29.0"
ratatui-image = "8.0.1"
tui-scrollview = "0.5.1"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.9"
futures = "0.3.28"
image-palette = "0.1.1"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
clap = { version = "4.5.41", features = ["derive"] }
