[package]
name = "color-replacer"
version = "0.1.0"
authors = ["SAANN3 <95036865+SAANN3@users.noreply.github.com>"]
license = "MIT"
edition = "2021"

[dependencies]
color-eyre = "0.6.5"
crossterm = { version ="0.29.0", features = ["event-stream", "default"]}
image = "0.25.8"
ratatui = "0.29.0"
ratatui-image = "8.0.1"
tui-scrollview = "0.5.1"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
futures = "0.3.28"
image-palette = "0.1.4"
dirs = "6.0.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.48", features = ["derive"] }
